# ml-inference-platform

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  quality-gate.yml
data/: calibration.jsonl  champion.json  corpus.jsonl  eval.jsonl
docs/: HOW_IT_WORKS.md
mlip/: __init__.py  __main__.py  cli.py  config.py
mlip/eval/: __init__.py  ab.py  calibration.py  champion.py  cli.py  comment.py  gate.py  graph.py  judge_cache.py  runner.py  scorers.py  stats.py
mlip/rag/: __init__.py  cli.py  corpus.py  pipeline.py  retriever.py
mlip/serving/: __init__.py  app.py  cache.py  metrics.py
mlip/serving/backends/: __init__.py  anthropic.py  base.py  ollama.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: mlip-serving.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
reports/: A-v1-k3-20260529T201515Z.json  B-v2-k3-20260529T201638Z.json  baseline-20260529T195502Z.json  baseline-20260529T200510Z.json
tests/: test_ab.py  test_calibration.py  test_comment.py  test_eval.py  test_gate.py  test_gate_statistical.py  test_judge_cache.py  test_rag.py  test_scorers.py  test_serving.py  test_smoke.py  test_stats.py
